--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "laravel-vite-plugin": "^1.0.0",
         "pusher-js": "^8.4.0-rc2",
         "sass": "^1.56.1",
+        "stylus": "^0.62.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
