--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "mdb-ui-kit": "^7.1.0"
     }
 }
